<resources>
    <string name="app_name">Tipsy2Bar</string>
    <string name="login_email_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="register">REGISTER</string>
    <string name="todo">todoo</string>
    <string name="login_name_hint">name</string>
    <string name="additem">ADD ITEM</string>
    <string name="category">category</string>
    <string name="size">size</string>
    <string name="price">price</string>
    <string name="sellitem">SELL ITEM</string>
    <string name="sizes">item size/type</string>
    <string name="items">Number of Packed Items</string>
    <string name="tems">Number of Items</string>
    <string name="Price">Price of One item</string>
    <string name="cart">ADD TO CART</string>
    <string name="pending">CHECK OUT ORDER</string>
    <string name="sold">PAID SALE</string>
    <string name="name">Customer Name</string>
    <string name="number">Customer Number</string>
    <string name="paid">COMPLETED PAYMENT</string>
    <string name="info">Customer Name/Number or Both</string>
    <string name="meth">INSTANT PAY</string>
    <string name="mpesa">Mpesa</string>
    <string name="cash">Cash</string>
    <string name="_0">0</string>
    <string name="select">Select Item</string>
    <string name="As_Ordered">Use the drop down arrow to select Order type\nIf select on Bill,add customer Number or Name and then click on check out\nIf select others,just proceed and click on checkout</string>
    <string name="prompt">INSTANT PAY</string>
    <string name="bill">CHECKOUT BILL</string>
    <string name="As_Bill">Complete Bill payment type then Checkout</string>
    <string name="stock">ADD STOCK</string>
    <string name="pricee">Price of Items</string>
    <string name="priceitems">Price of One Packed Item</string>
    <string name="nameitem">Brand Name Only</string>
    <string name="titlebar">STOCK MANAGEMENT DASHBOARD</string>
    <string name="search">Search Product Name Here</string>
    <string name="categorysize">size/type of items or manufactures/producer name</string>
    <string name="sizesterms">category name or common term name of product</string>
    <string name="additemstock">ADD TO STOCK</string>
    <string name="billbar">BILL LIST DASHBOARD</string>
    <string name="searchh">search for customer name here</string>
    <string name="no_item_is_ordered_on_bill">No Item is Ordered on Bill</string>
    <string name="reasn">Reason for Deleting eg Spoilt, Damaged, Expired</string>
    <string name="delete">DELETE ITEM</string>
    <string name="repobar">REPORTS DASHBOARD</string>
    <string name="expense">ADD EXPENSE</string>
    <string name="no_item_is_expensed_">No Expense is Added Yet! Add to view List</string>
    <string name="tem">Expense Name</string>
    <string name="Prices">Expense Price</string>
    <string name="ex">ADD EXPENSE</string>
    <string name="titlebars">EXPENSES LISTS DASHBOARD</string>
    <string name="titlekeg">KEG LIST DASHBOARD</string>
    <string name="barrel">ADD NEW BARREL</string>
    <string name="barrelname">Barrel Type:</string>
    <string name="barrelview">type</string>
    <string name="buydate">Bought Date:</string>
    <string name="buyview">buydate</string>
    <string name="sales">Sales of:</string>
    <string name="salesview">salesat</string>
    <string name="period">Period:</string>
    <string name="time">days</string>
    <string name="temp">Name/Type</string>
    <string name="barPrices">Barrel Price</string>
    <string name="exbar">SAVE BARREL</string>
    <string name="show">SALES</string>
    <string name="sellbarrel">SELL KEG ITEM</string>
    <string name="no_item_is_keg_">No Barrels Available, Click on Add New Barrel to Add</string>
    <string name="baarrelview">No information collected</string>
    <string name="saleview">make sale to collect information</string>
    <string name="end">End Sale</string>
    <string name="can">CANCEL</string>
    <string name="terminate">Ending Barrel Sale Cannot be Redone!\nAre you Sure on Proceeding?</string>
</resources>