<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="5dp"
    android:bottomLeftRadius="8dp"
    android:bottomRightRadius="8dp"
    android:topLeftRadius="8dp"
    android:topRightRadius="8dp"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".KegActivity">


    <TextView
        android:id="@+id/title"
        style="@style/viewParent.headerText.NoMode"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="Barrel Sales Report! "
        android:textColor="@color/whiteTextColor"
        tools:ignore="HardcodedText,MissingConstraints" />
    <TextView
        android:id="@+id/barrel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:text="@string/barrelname"
        android:textColor="#020000"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/barrelview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginStart="100dp"
        android:text="@string/baarrelview"
        android:textColor="@color/whiteTextColor"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrel"
        android:text="@string/sales"
        android:textColor="#020000"
        android:layout_marginTop="3dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/salesview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrel"
        android:layout_marginStart="75dp"
        android:text="@string/saleview"
        android:textColor="@color/whiteTextColor"
        android:layout_marginTop="3dp"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/btn_cancel"
        android:layout_width="40dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_x"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints"
         />


</androidx.constraintlayout.widget.ConstraintLayout>