<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExpenseActivity">







    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#56AE57"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titlebars"
            android:textStyle="normal|bold"
            android:textSize="23sp"
            android:layout_marginEnd="60dp"
            android:textColor="#FFFFFF"

            />

    </androidx.appcompat.widget.Toolbar>



    <EditText
        android:id="@+id/searchName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/modifiedEditText"
        android:imeOptions="actionSearch"
        android:drawableEnd="@android:drawable/ic_menu_search"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:hint="@string/search"
        android:inputType="textAutoComplete"
        android:maxLines="1"
        />
    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#56AE57"
        android:layout_marginTop="2dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/searchName"
        android:text="@string/expense" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/precview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/addButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:foregroundGravity="center_horizontal"
        android:visibility="invisible"
        android:text="@string/no_item_is_expensed_"
        android:textColor="#020000"
        android:layout_marginTop="500dp"
        android:textSize="20sp" />







</androidx.constraintlayout.widget.ConstraintLayout>