<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sellitemActivity">







    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#56AE57"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlebar"
        android:textStyle="normal|bold"
        android:textSize="25sp"
        android:layout_marginEnd="60dp"
        android:textColor="#FFFFFF"

        />

    </androidx.appcompat.widget.Toolbar>



        <EditText
            android:id="@+id/searchName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/modifiedEditText"
            android:imeOptions="actionSearch"
            android:drawableEnd="@android:drawable/ic_menu_search"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:hint="@string/search"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/precview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toBottomOf="@+id/searchName"
        android:visibility="visible"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

     />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF6813"
        android:src="@drawable/cart"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="60dp"
        android:layout_gravity="bottom|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/cartquantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="82dp"
        android:layout_gravity="bottom|end"
        android:elevation="16dp"
        android:text="@string/_0"
        android:textColor="@color/whiteTextColor"
        android:textSize="13sp"
        android:textStyle="bold" />






</androidx.constraintlayout.widget.ConstraintLayout>